# file-streaming

./: .gitignore  Makefile  application.conf  driver.py  readme.md  setup.cfg
docker/: Dockerfile
file_streaming/: __init__.py  main.py
file_streaming/sync/: file_sync.py  stream_options.py
file_streaming/utils/: config.py  exceptions.py  iomete_logger.py  schema_utils.py  stream_utils.py
tests/: __init__.py
tests/integration/: _spark_session.py  test_file_sync.py
tests/integration/resources/json/: 1665487043860.events.gz.txt  1665865477020.events.gz.txt  1665866249643.events.gz.txt  1665942513921.events.gz.txt
tests/unit/: test_stream_options.py
tests/unit/utils/: test_schema_utils.py  test_stream_utils.py
